# SDL2Base

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: main.cpp
